--- a/pkg/controller/volume/storageprotection/BUILD
+++ b/pkg/controller/volume/storageprotection/BUILD
@@ -2,8 +2,8 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
-    srcs = ["pv_protection_controller.go"],
-    importpath = "k8s.io/kubernetes/pkg/controller/volume/pvprotection",
+    srcs = ["storage_object_in_use_protection_controller.go"],
+    importpath = "k8s.io/kubernetes/pkg/controller/volume/storageprotection",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/controller:go_default_library",
@@ -13,6 +13,7 @@ go_library(
         "//vendor/github.com/golang/glog:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
+        "//vendor/k8s.io/apimachinery/pkg/labels:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/util/runtime:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
         "//vendor/k8s.io/client-go/informers/core/v1:go_default_library",
@@ -23,23 +24,9 @@ go_library(
     ],
 )
 
-filegroup(
-    name = "package-srcs",
-    srcs = glob(["**"]),
-    tags = ["automanaged"],
-    visibility = ["//visibility:private"],
-)
-
-filegroup(
-    name = "all-srcs",
-    srcs = [":package-srcs"],
-    tags = ["automanaged"],
-    visibility = ["//visibility:public"],
-)
-
 go_test(
     name = "go_default_test",
-    srcs = ["pv_protection_controller_test.go"],
+    srcs = ["storage_object_in_use_protection_controller_test.go"],
     embed = [":go_default_library"],
     deps = [
         "//pkg/controller:go_default_library",
@@ -56,4 +43,18 @@ go_test(
         "//vendor/k8s.io/client-go/kubernetes/fake:go_default_library",
         "//vendor/k8s.io/client-go/testing:go_default_library",
     ],
+)
+
+filegroup(
+    name = "package-srcs",
+    srcs = glob(["**"]),
+    tags = ["automanaged"],
+    visibility = ["//visibility:private"],
+)
+
+filegroup(
+    name = "all-srcs",
+    srcs = [":package-srcs"],
+    tags = ["automanaged"],
+    visibility = ["//visibility:public"],
 )
