--- a/staging/src/k8s.io/client-go/examples/read-yaml-configuration-deployment/BUILD
+++ b/staging/src/k8s.io/client-go/examples/read-yaml-configuration-deployment/BUILD
@@ -6,9 +6,9 @@ go_library(
     importpath = "k8s.io/client-go/examples/read-yaml-configuration-deployment",
     visibility = ["//visibility:private"],
     deps = [
-        "//vendor/k8s.io/api/apps/v1beta1:go_default_library",
+        "//vendor/k8s.io/api/apps/v1:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
-        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
+        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/util/yaml:go_default_library",
         "//vendor/k8s.io/client-go/kubernetes:go_default_library",
         "//vendor/k8s.io/client-go/kubernetes/scheme:go_default_library",
