wire through json/yaml print flags

--- a/pkg/printers/BUILD
+++ b/pkg/printers/BUILD
@@ -13,6 +13,7 @@ go_library(
         "humanreadable.go",
         "interface.go",
         "json.go",
+        "json_yaml_flags.go",
         "jsonpath.go",
         "name.go",
         "printers.go",
@@ -24,6 +25,7 @@ go_library(
     deps = [
         "//vendor/github.com/ghodss/yaml:go_default_library",
         "//vendor/github.com/golang/glog:go_default_library",
+        "//vendor/github.com/spf13/cobra:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/api/meta:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1/unstructured:go_default_library",
@@ -39,7 +41,10 @@ go_library(
 
 go_test(
     name = "go_default_xtest",
-    srcs = ["customcolumn_test.go"],
+    srcs = [
+        "customcolumn_test.go",
+        "json_yaml_flags_test.go",
+    ],
     deps = [
         ":go_default_library",
         "//pkg/api/legacyscheme:go_default_library",
